fix broken css on apple devices

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,9 +6,6 @@
     gap: 1rem;
     width: 100%;
     height: 100vh;
-    min-width: 35rem;
-    min-height: 80rem;
-    overflow: hidden;
 
     @media only screen and (max-width: 900px) {
         grid-template-columns: 1fr;
