--- a/src/scss/separator.scss
+++ b/src/scss/separator.scss
@@ -1,5 +1,7 @@
 .separator {
     user-select: none;
-    min-height: max-content;
-    min-width: max-content;
+    min-height: 25px;
+    min-width: 25px;
+    width: 25px;
+    height: 25px;
 }
